--- a/abcmanage/pom.xml
+++ b/abcmanage/pom.xml
@@ -56,7 +56,19 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency>         
+		</dependency>
+		
+		<dependency> 
+		    <groupId>com.h2database</groupId> 
+		    <artifactId>h2</artifactId>
+		    <version>1.4.197</version> 
+		    <scope>runtime</scope>
+		</dependency>
+		
+		<dependency> 
+		    <groupId>org.springframework.boot</groupId> 
+		    <artifactId>spring-boot-starter-validation</artifactId> 
+		</dependency>       
 	    
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
